actualizando textos y enlace a canva

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
-                        <p class="presentacionInfoPrincipal lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack MERN</h1>
+                        <p class="presentacionInfoPrincipal lead">Además soy profesor de matemática y tutor de JavaScript
+                        Me encuentro practicando y reforzando mi stack con proyectos, mientras aprendo otras tecnologías. Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
                         <div class="cajaIconosPresentacion">
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
                                 <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion">
@@ -88,7 +89,7 @@
                                 <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion">
                                 <p class="nombreIcono lead">GitHub</p>
                             </a>
-                            <a href="https://www.canva.com/design/DAEnltGy8lg/Qq4FVsG4YqKUplT9ACsY4Q/view?utm_content=DAEnltGy8lg&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" target="_blank" class="m-3 text-decoration-none">
+                            <a href="https://www.canva.com/design/DAFLHUVjaJc/ynwPorj6f6oiyr6VswVGAQ/view?utm_content=DAFLHUVjaJc&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" class="m-3 text-decoration-none">
                                 <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion">
                                 <p class="nombreIcono lead">Mi CV</p>
                             </a>
