actualizando info de estudio

--- a/index.html
+++ b/index.html
@@ -299,14 +299,14 @@
                             <p class="fs-4 mt-3 lead">2021 mar-dic</p>
                         </div>
                     </article>
-                    <!-- Desarrollador backend -->
+                    <!-- Desarrollador Full Stack PERN en APX -->
                     <article id="proyectoCoderhouse" class="proyecto trans">
-                        <a href="https://www.coderhouse.com/online/carrera-online-desarrollo-fullstack" target="_blank">
-                            <img src="img/desarrollo-full-stack.png"
-                                alt="imagen de la carrera de desarrollo full stack en Coderhouse" class="img">
+                        <a href="https://apx.school/" target="_blank">
+                            <img src="img/apx-logo.png"
+                                alt="imagen de la carrera de desarrollo full stack en apx" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Desarrollador backend</p>
+                            <p class="fs-4 m-0">Desarrollador Full Stack PERN</p>
                             <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
                     </article>
