Actualizando los textos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
                         <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack MERN</h1>
-                        <p class="presentacionInfoPrincipal lead">Además soy profesor de matemática y tutor de JavaScript
+                        <p class="presentacionInfoPrincipal lead">Además soy profesor de matemática y tutor de JavaScript.
                         Me encuentro practicando y reforzando mi stack con proyectos, mientras aprendo otras tecnologías. Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
                         <div class="cajaIconosPresentacion">
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
@@ -99,7 +99,7 @@
                     <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
-                        <p class="nombre">Front-end Developer</p>
+                        <p class="nombre">Full Stack Developer</p>
                     </div>
                 </div>
             </div>
@@ -110,9 +110,6 @@
         <section>
             <h2 id="sobre" class="titulo fs-1 mt-4">Sobre mí</h2>
             <div class="container sobreMi">
-                <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, tengo 33 años, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
-                <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
-                <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
                 <h3 class="subtitulo">Hobbies:</h3>
                 <div class="cajaHobbie">
                     <img src="img/books.png" class="iconoHobbie" alt="libros">
@@ -508,7 +505,7 @@
 
         <!-- Sección de contacto-->
         <section>
-            <h2 id="contact" class="titulo fs-1 mt-5">Contact</h2>
+            <h2 id="contact" class="titulo fs-1 mt-5">Contacto</h2>
             <!-- <h3 class="text-center text-dark">My email: nahuel.developer1@gmail.com</h3> -->
             <form name="contacto" id="enviar-email" class="container cajaFormulario bg-light mt-5 mb-5" method="POST" netlify>
                 <div class="row">
