--- a/index.html
+++ b/index.html
@@ -441,16 +441,16 @@
                     </article>
                     <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE -->
                     <article class="proyecto trans">
-                        <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="imagen de la app de pacientes" class="img"></a>
+                        <a href="#" target="_blank"><img src="img/portada-administrador-pacientes.png" alt="imagen de la app de pacientes" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
-                            <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
+                            <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
                         <div class="d-flex">
-                            <a href="#">
+                            <a href="https://nahuel-devone.github.io/administrador-de-pacientes/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="#">
+                            <a href="https://github.com/Nahuel-DevOne/administrador-de-pacientes" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
