Limpiando archivos y agregando el proyecto del CRM de clientes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAFOLIO</title>
     <meta name="keywords" content="palabras clave ...">
-    <meta name="description" content="Este es el sitio web de mi portafolio ...">
+    <meta name="description" content="Este es el sitio web de mi portafolio">
     <!-- Imagen para el título de la pestaña -->
     <link rel="icon" type="favicon/x-icon" href="./img/pi-mathematical-constant-symbol.svg">
     <!-- Enlaces a google font: letra "Nunito" -->
@@ -384,29 +384,11 @@
                             </a>
                         </div>
                     </article>
-                    <!-- Agenda de clientes, realizada como desafío y proyecto para el curso de JavaScript de Coderhouse -->
-                    <article class="proyecto trans">
-                        <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
-                            <img src="./img/agenda.png" alt="imagen de una agenda de clientes" class="img">
-                        </a>
-                        <div class="info">
-                            <p class="fs-4 m-0">Agenda de clientes</p>
-                            <p class="fs-4 mt-3 lead">JavaScript</p>
-                        </div>
-                        <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/agenda-de-clientes/" target="_blank">
-                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
-                            </a>
-                            <a href="https://github.com/Nahuel-DevOne/agenda-de-clientes" target="_blank">
-                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
-                            </a>
-                        </div>
-                    </article>
                     <!-- Encriptador de texto, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
                             <img src="./img/encriptador-img.png" alt="imagen de la aplicación del encriptador"
-                                class="img">
+                            class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Encriptador</p>
@@ -435,6 +417,24 @@
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/ahorcado-js" target="_blank">
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
+                            </a>
+                        </div>
+                    </article>
+                    <!-- CRM de clientes, usando IndexedDB como base de datos -->
+                    <article class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/crm-clientes/" target="_blank">
+                            <img src="./img/portada-crm-clientes.png" alt="imagen de la app del CRM de clientes" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">CRM de clientes</p>
+                            <p class="fs-4 mt-3 lead">JS - IndexedDB</p>
+                        </div>
+                        <div class="d-flex">
+                            <a href="https://nahuel-devone.github.io/crm-clientes/" target="_blank">
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/crm-clientes" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
@@ -573,10 +573,10 @@
     </footer>
     <!-- Acá termina el pie de página -->
 
+    <!-- Enlace a JavaScript de bootstrap local -->
+    <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
     <!-- Enlace a JavaScript local -->
     <script src="./assets/js/index.js"></script>
-    <!-- Enlace a JavaScript de bootstrap local -->
-    <script src="./assets/bootstrap/js/bootstrap.js"></script>
 </body>
 
 </html>
