Corrigiendo unos enlaces

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     </article>
                     <!-- Programa Codo a Codo Full Stack Node.js -->
                     <article id="proyectoCoderhouse" class="proyecto trans">
-                        <a href="#" target="_blank">
+                        <a href="https://www.buenosaires.gob.ar/educacion/codo-codo" target="_blank">
                             <img src="img/education/codoacodo.png"
                                 alt="imagen del logo de Codo a Codo, programa de formación de TI" class="img">
                         </a>
@@ -472,7 +472,7 @@
                     </article>
                     <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE -->
                     <article class="proyecto trans">
-                        <a href="#" target="_blank"><img src="img/projects/portada-administrador-pacientes.png" alt="imagen de la app de pacientes" class="img"></a>
+                        <a href="https://nahuel-devone.github.io/administrador-de-pacientes/" target="_blank"><img src="img/projects/portada-administrador-pacientes.png" alt="imagen de la app de pacientes" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
                             <p class="fs-4 mt-3 lead">JavaScript</p>
