--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <img src="./img/social/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion">
                                 <p class="nombreIcono lead">GitHub</p>
                             </a>
-                            <a href="https://www.canva.com/design/DAFLHUVjaJc/ynwPorj6f6oiyr6VswVGAQ/view?utm_content=DAFLHUVjaJc&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" class="m-3 text-decoration-none">
+                            <a href="https://www.canva.com/design/DAFQRX4AtZ0/VUvyZLmMh4l3L57ySJWVog/view?utm_content=DAFQRX4AtZ0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" class="m-3 text-decoration-none">
                                 <img src="img/social/download-pdf.png" alt="Imagen del icono de un CV" class="iconoPresentacion">
                                 <p class="nombreIcono lead">Mi CV</p>
                             </a>
