Agregando la finalización del curso de Codo a Codo FS JavaScript

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Full Stack - Node.js</p>
-                            <p class="fs-4 mt-3 lead">Terminando</p>
+                            <p class="fs-4 mt-3 lead">2022 Ago-Dic</p>
                         </div>
                     </article>
                     <!-- Desarrollador Full Stack PERN en APX -->
