Agregando un ícono de corazón y corrigiendo un detalle del footer

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 
     <!-- Acá empieza el pie de página -->
     <footer id="footer" class="border-top">
-        <div class="container-fluid">
+        <div class="container-fluid m-0 p-0">
             <a href="#" class="logoFooter">Portafolio</a>
             <!-- <div class="column pie">
                 <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="./img/github.svg"
@@ -590,7 +590,7 @@
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a>
             </div> -->
-            <h4 class="footerInfo">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
+            <h4 class="footerInfo p-2 mb-2">&copy;2022 Desarrollado con ❤️ por Nahuel-DevOne</h4>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
