Sacando la formación en APX

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         </div>
                     </article>
                     <!-- Desarrollador Full Stack PERN en APX -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <!-- <article id="proyectoCoderhouse" class="proyecto trans">
                         <a href="https://apx.school/" target="_blank">
                             <img src="img/education/logo-apx.png"
                                 alt="imagen de la carrera de desarrollo full stack en apx" class="img">
@@ -350,7 +350,7 @@
                             <p class="fs-4 m-0">Desarrollador Full Stack PERN</p>
                             <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
-                    </article>
+                    </article> -->
                 </div>
             </div>
         </section>
