--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
                     </div>    
                     <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
+                        <img src="img/skills/technical-skills/markdown-original.svg" class="iconoSkill" alt="logo de Trello">
+                        <p class="nombreIcono lead">Markdown</p>
+                    </div>    
+                    <div class="m-2">
+                        <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
                         <img src="img/skills/technical-skills/git-original.svg" class="iconoSkill" alt="logo de Git">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
@@ -170,10 +175,10 @@
                         <img src="img/skills/technical-skills/icons8-bootstrap.png" class="iconoSkill" alt="logo de Bootstrap">
                         <p class="nombreIcono lead">Bootstrap</p>
                     </div>    
-                    <!-- <div class="m-2">
+                    <div class="m-2">
                         <img src="img/skills/technical-skills/tailwindcss-plain.svg" class="iconoSkill" alt="logo de Tailwind">
                         <p class="nombreIcono lead">Tailwind</p>
-                    </div>     -->
+                    </div>    
                     <div class="m-2">
                         <img src="img/skills/technical-skills/sass-original.svg" class="iconoSkill" alt="logo de SASS">
                         <p class="nombreIcono lead">SASS</p>
@@ -182,10 +187,10 @@
                         <img src="img/skills/technical-skills/javascript-original.svg" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
-                    <!-- <div class="m-2">
+                    <div class="m-2">
                         <img src="img/skills/technical-skills/typescript-original.svg" class="iconoSkill" alt="logo de TypeScript">
                         <p class="nombreIcono lead">TypeScript</p>
-                    </div>     -->
+                    </div>    
                     <div class="m-2">
                         <img src="img/skills/technical-skills/react-original.svg" class="iconoSkill" alt="logo de React">
                         <p class="nombreIcono lead">React</p>
@@ -205,6 +210,10 @@
                     <div class="m-2">
                         <img src="img/skills/technical-skills/npm-original-wordmark.svg" class="iconoSkill" alt="logo de npm">
                         <p class="nombreIcono lead">npm</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/python-original.svg" class="iconoSkill" alt="logo de npm">
+                        <p class="nombreIcono lead">Python</p>
                     </div>    
                     <div class="m-2">
                         <img src="img/skills/technical-skills/icons8-mongodb.png" class="iconoSkill" alt="logo de MongoDB">
