actualizando los estudios

--- a/index.html
+++ b/index.html
@@ -349,17 +349,17 @@
                             <p class="fs-4 mt-3 lead">2022 Ago-Dic</p>
                         </div>
                     </article>
-                    <!-- Desarrollador Full Stack PERN en APX -->
-                    <!-- <article id="proyectoCoderhouse" class="proyecto trans">
-                        <a href="https://apx.school/" target="_blank">
-                            <img src="img/education/logo-apx.png"
-                                alt="imagen de la carrera de desarrollo full stack en apx" class="img">
+                    <!-- Ingeniería en sistemas UTEL -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://utel.edu.mx/argentina" target="_blank">
+                            <img src="img/education/Utel_logo.png"
+                                alt="imagen del logo de la universidad UTEL" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Desarrollador Full Stack PERN</p>
+                            <p class="fs-4 m-0">Ingeniería en sistemas</p>
                             <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
-                    </article> -->
+                    </article>
                 </div>
             </div>
         </section>
