--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack MERN</h1>
-                        <p class="presentacionInfoPrincipal lead">Además soy profesor de matemática y tutor de JavaScript.
-                        Me encuentro practicando y reforzando mi stack con proyectos, mientras aprendo otras tecnologías. Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack</h1>
+                        <p class="presentacionInfoPrincipal lead">Full Stack JavaScript con stack MERN, Python, profesor de matemática y tutor de JavaScript.
+                        Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para el análisis de datos y el machine learning. 
+                        Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
                         <div class="cajaIconosPresentacion">
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
                                 <img src="./img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion">
@@ -216,6 +217,10 @@
                         <p class="nombreIcono lead">Python</p>
                     </div>    
                     <div class="m-2">
+                        <img src="img/skills/technical-skills/icons8-anaconda.svg" class="iconoSkill" alt="logo de npm">
+                        <p class="nombreIcono lead">Anaconda</p>
+                    </div>    
+                    <div class="m-2">
                         <img src="img/skills/technical-skills/icons8-mongodb.png" class="iconoSkill" alt="logo de MongoDB">
                         <p class="nombreIcono lead">MongoDB</p>
                     </div>    
@@ -347,6 +352,17 @@
                         <div class="info">
                             <p class="fs-4 m-0">Full Stack - Node.js</p>
                             <p class="fs-4 mt-3 lead">2022 Ago-Dic</p>
+                        </div>
+                    </article>
+                    <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://argentinaprograma.unsam.edu.ar/paginas/plan.html" target="_blank">
+                            <img src="img/education/logo-unsam.jpg"
+                                alt="imagen del logo de la universidad UNSAM" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Ciencia de Datos e IA</p>
+                            <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
                     </article>
                     <!-- Ingeniería en sistemas UTEL -->
