Actualizando los proyectos, blackjack agregado

--- a/index.html
+++ b/index.html
@@ -424,6 +424,24 @@
                             </a>
                         </div>
                     </article>
+                    <!-- Página web con HMTL5, CSS3 y JavaScript, como challenge para el programa de Codo a Codo -->
+                    <article class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
+                            <img src="./img/projects/portada-conferencia.png" alt="imagen de la portada de la página de conferencia Bs As." class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Conferencia Bs As</p>
+                            <p class="fs-4 mt-3 lead">Página Web</p>
+                        </div>
+                        <div class="d-flex">
+                            <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/conferencia" target="_blank">
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver código</button>
+                            </a>
+                        </div>
+                    </article>
                     <!-- Portafolio hecho casi en su totalidad con bootstrap, para practicar este framework -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
@@ -461,20 +479,20 @@
                             </a>
                         </div>
                     </article>
-                    <!-- Ahorcado, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
+                    <!-- Juego del Blackjack, proyecto para practicar JavaScript, usando vite, importaciones de módulos y buenas prácticas -->
                     <article class="proyecto trans">
-                        <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
-                            <img src="./img/projects/rope.png" alt="imagen de la aplicación del ahorcado" class="img">
+                        <a href="https://game-blackjack-vite.netlify.app/" target="_blank">
+                            <img src="./img/projects/portada-blackjack.png" alt="imagen de la aplicación del juego del Blackjack" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Ahorcado</p>
-                            <p class="fs-4 mt-3 lead">JavaScript</p>
+                            <p class="fs-4 m-0">Blackjack</p>
+                            <p class="fs-4 mt-3 lead">JavaScript - Vite</p>
                         </div>
                         <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
+                            <a href="https://game-blackjack-vite.netlify.app/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/ahorcado-js" target="_blank">
+                            <a href="https://github.com/Nahuel-DevOne/blackjack-vite" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
@@ -510,24 +528,6 @@
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/administrador-de-pacientes" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
-                            </a>
-                        </div>
-                    </article>
-                    <!-- Ecommerce con HMTL5, CSS3 y JavaScript, como challenge para el programa ONE de Oracle + Alura LATAM -->
-                    <article class="proyecto trans">
-                        <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
-                            <img src="./img/projects/portada-conferencia.png" alt="imagen de la portada de la página de conferencia Bs As." class="img">
-                        </a>
-                        <div class="info">
-                            <p class="fs-4 m-0">Conferencia Bs As</p>
-                            <p class="fs-4 mt-3 lead">Página Web</p>
-                        </div>
-                        <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
-                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
-                            </a>
-                            <a href="https://github.com/Nahuel-DevOne/conferencia" target="_blank">
-                                <button class="btn btn-md btnColorDos bg-gradient">Ver código</button>
                             </a>
                         </div>
                     </article>
